Refracting code and pom.xml